[package]
name = "git_beautifull_tree_log"
version = "0.1.0"
authors = ["Mohammad Javad Ghasemy <geeksesi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13"
structopt = "0.3"
time = "0.1.39"
tempfile = "3.1.0"
thread-id = "3.3.0" # remove when we work with minimal-versions without it
paste = "0.1.12"